# fuels-bug

./: Cargo.toml  Forc.toml  README.md
src/: main.sw
tests/: harness.rs  utils.rs
